# GLEIF-IT.github.io

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  discovery-schema.json  pyproject.toml  schema.json
.well-known/: SCHEMA.md  STRUCTURE.md  index.html  index.json
.well-known/keri/: index.html
.well-known/keri/oobi/: index.html  index.json
.well-known/keri/oobi/BDkq35LUU63xnFmfhljYYRY0ymkCg7goyeCxN30tsvmS/: index.json
.well-known/keri/oobi/BFl6k3UznzmEVuMpBOtUUiR2RO2NZkR3mKrZkNRaZedo/: index.json
.well-known/keri/oobi/BHxz8CDS_mNxAhAxQe1qxdEIzS625HoYgEMgqjZH_g2X/: index.json
.well-known/keri/oobi/BLmvLSt1mDShWS67aJNP4gBVBhtOc3YEu8SytqVSsyfw/: index.json
.well-known/keri/oobi/BNfDO63ZpGc3xiFb0-jIOUnbr_bA-ixMva5cZb3s4BHB/: index.json
.well-known/keri/oobi/EBNaNu-M9P5cgrnfl2Fvymy4E_jvxxyjb70PRtiANlJy/: index.json
.well-known/keri/oobi/EBfdlu8R27Fbx-ehrqwImnK-8Cm79sqbAQ4MmvEAYqao/: index.json
.well-known/keri/oobi/EDP1vHcw_wc4M__Fj53-cJaBnZZASd-aMTaSyWEQ-PC2/: index.json
.well-known/keri/oobi/EFcrtYzHx11TElxDmEDx355zm7nJhbmdcIluw7UMbUIL/: index.json
.well-known/keri/oobi/EINmHd5g7iV-UldkkkKyBIH052bIyxZNBn9pq-zNrYoS/: index.json
.well-known/keri/oobi/EKA57bKBKxr_kN7iN5i7lMUxpMG-s19dRcmov1iDxz-E/: index.json
.well-known/schema/: index.html
.well-known/schema/oobi/: index.html
.well-known/witness/: index.html
.well-known/witness/oobi/: index.html
oobi/EEy9PkikFcANV1l7EHukCeXqrzT1hNZjGlUk7wuMO5jw/: index.json
oobi/EMhvwOlyEJ9kN4PrwCpr9Jsv7TxPhiYveZ0oP3lJzdEi/: index.json
src/gleif_discovery_server/: generate.py  server.py
(+8 files in other folders)
